--- a/src/it/TEST-25/pom.xml
+++ b/src/it/TEST-25/pom.xml
@@ -33,6 +33,10 @@
 
     <name>Integration Test 25</name>
 
+    <properties>
+        <protobufVersion>3.4.0</protobufVersion>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -45,7 +49,7 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
-                            <protocArtifact>com.google.protobuf:protoc:3.4.0:exe:${os.detected.classifier}
+                            <protocArtifact>com.google.protobuf:protoc:${protobufVersion}:exe:${os.detected.classifier}
                             </protocArtifact>
                         </configuration>
                     </execution>
