--- a/src/it/TEST-29/invoker.properties
+++ b/src/it/TEST-29/invoker.properties
@@ -15,9 +15,8 @@
 #
 
 # An optional description for this build job to be included in the build reports.
-invoker.description = \
-  Verifies that useArgumentFile option compiles protos
+invoker.description = Verifies that protoc can be invoked with an @args file and that unicode file names are properly handled.
 
 # A comma or space separated list of goals/phases to execute, may
 # specify an empty list to execute the default goal of the IT project
-invoker.goals = clean compile
+invoker.goals = clean generate-sources
