--- a/src/it/TEST-16/pom.xml
+++ b/src/it/TEST-16/pom.xml
@@ -39,6 +39,13 @@
     </properties>
 
     <build>
+        <extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.5.0.Final</version>
+            </extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
@@ -69,6 +76,14 @@
                                     <args>
                                         <arg>prefix-</arg>
                                     </args>
+                                </protocPlugin>
+                                <protocPlugin>
+                                    <id>grpc-java</id>
+                                    <groupId>io.grpc</groupId>
+                                    <artifactId>protoc-gen-grpc-java</artifactId>
+                                    <version>1.12.0</version>
+                                    <type>exe</type>
+                                    <classifier>${os.detected.classifier}</classifier>
                                 </protocPlugin>
                             </protocPlugins>
                         </configuration>
