--- a/src/it/setup-it-parent/pom.xml
+++ b/src/it/setup-it-parent/pom.xml
@@ -41,7 +41,7 @@
 
         <mavenVersion>3.3.9</mavenVersion>
 
-        <protobufVersion>3.11.1</protobufVersion>
+        <protobufVersion>3.17.0-rc-2</protobufVersion>
         <protobufJavaArtifact>protobuf-java</protobufJavaArtifact>
     </properties>
 
