--- a/src/it/dependencies/pom.xml
+++ b/src/it/dependencies/pom.xml
@@ -166,7 +166,7 @@
                 <version>${protobufVersion}</version>
                 <type>exe</type>
                 <classifier>${os.detected.classifier}</classifier>
-                <scope>provided</scoope>
+                <scope>provided</scope>
               </dependency>
             </dependencies>
         </profile>
