--- a/src/it/TEST-28/pom.xml
+++ b/src/it/TEST-28/pom.xml
@@ -90,5 +90,10 @@
             <artifactId>grpc-stub</artifactId>
             <version>${grpcVersion}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 </project>
