--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,29 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+      - name: Set up JDK 1.8
+        id: setupJava
+        uses: actions/setup-java@v2
         with:
-          java-version: '17'
+          java-version: '8'
           distribution: 'temurin'
+      - uses: cactuslab/maven-toolchains-xml-action@v1
+        with:
+          toolchains: |
+            [
+              {"jdkVersion": "1.8", "jdkHome": "${{steps.setupJava.outputs.path}}"}
+            ]
       - name: Build
         run: mvn -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn compile
-      - name: Test
+      - name: Unit Tests
         run: mvn -B test -ff
+      - name: Integrations Tests
+        run: mvn -B -Prun-its verify
       - name: Package
         run: mvn -B package -Dmaven.test.skip
       - name: Verify
